"""
L++ Compiled Operator: Logic Vulnerability Pointer (LVP)
Version: 1.0.0
Description: Non-Destructive Testing (NDT) for software logic. Like X-rays for turbine blades, LVP finds 'logic cracks' in Python applications by: (1) X-Ray: extracting logic blueprints, (2) Threat Model: defining safety invariants, (3) Stress Test: running TLC to find counter-examples, (4) Exploit Gen: converting traces to trigger scripts, (5) The Fix: re-machining logic with TLAPS immunity seals.

Auto-generated from JSON blueprint. Do not edit directly.
"""

from frame_py.lpp_core import (
    atom_EVALUATE,
    atom_TRANSITION,
    atom_MUTATE,
    atom_DISPATCH,
    TransitionTrace,
)


# ======================================================================
# BLUEPRINT CONSTANTS
# ======================================================================

BLUEPRINT_ID = 'logic_vulnerability_pointer'
BLUEPRINT_NAME = 'Logic Vulnerability Pointer (LVP)'
BLUEPRINT_VERSION = '1.0.0'
ENTRY_STATE = 'idle'
TERMINAL_STATES = {'complete', 'secure', 'error'}

STATES = {
    'idle': 'idle',  # Awaiting target for security audit
    'xray': 'xray',  # Phase 1: X-Ray - Extracting logic blueprint from target
    'threat_modeling': 'threat_modeling',  # Phase 2: Threat Model - Defining safety invariants with LLM
    'stress_testing': 'stress_testing',  # Phase 3: Stress Test - Running TLC model checker
    'analyzing_traces': 'analyzing_traces',  # Analyzing counter-example traces for exploitability
    'exploit_generation': 'exploit_generation',  # Phase 4: Exploit Gen - Converting traces to trigger scripts
    'generating_fix': 'generating_fix',  # Phase 5: The Fix - Re-machining logic with missing gates
    'verifying_fix': 'verifying_fix',  # Verifying fix with TLAPS proof
    'reporting': 'reporting',  # Generating final audit report
    'complete': 'complete',  # Audit complete - vulnerabilities cataloged
    'secure': 'secure',  # Target passed all checks - no vulnerabilities found
    'error': 'error',  # Audit error occurred
}

GATES = {
    'has_target': 'target_path is not None and len(target_path) > 0',
    'no_target': 'target_path is None or len(target_path) == 0',
    'has_bone': 'bone_json is not None',
    'no_bone': 'bone_json is None',
    'has_invariants': 'invariants is not None and len(invariants) > 0',
    'no_invariants': 'invariants is None or len(invariants) == 0',
    'has_tla': 'tla_spec is not None and len(tla_spec) > 0',
    'has_counter_examples': 'counter_examples is not None and len(counter_examples) > 0',
    'no_counter_examples': 'counter_examples is None or len(counter_examples) == 0',
    'has_exploits': 'exploits is not None and len(exploits) > 0',
    'has_patches': 'patches is not None and len(patches) > 0',
    'fix_verified': 'fix_verified == True',
    'fix_not_verified': 'fix_verified != True',
    'auto_fix_enabled': 'auto_fix == True',
    'auto_fix_disabled': 'auto_fix != True',
    'has_error': 'error is not None',
    'no_error': 'error is None',
    'high_severity': 'severity_score is not None and severity_score >= 7',
    'low_severity': 'severity_score is None or severity_score < 7',
}

DISPLAY_RULES = [
    {'gate': 'has_counter_examples', 'template': 'VULNERABILITIES FOUND: {vulnerability_count} logic cracks detected (Severity: {severity_score}/10)'},
    {'gate': 'has_exploits', 'template': 'EXPLOIT GEN: {exploits} PoC trigger scripts generated'},
    {'gate': 'fix_verified', 'template': 'FIX VERIFIED: TLAPS proof confirms immunity'},
    {'gate': 'no_counter_examples', 'template': 'SECURE: No logic vulnerabilities found - target passed NDT'},
    {'gate': 'has_error', 'template': 'ERROR in phase {phase}: {error}'},
    {'gate': 'has_bone', 'template': 'X-RAY COMPLETE: Logic blueprint extracted'},
    {'gate': 'has_invariants', 'template': 'THREAT MODEL: {invariant_count} safety invariants defined'},
    {'template': 'LVP Ready - Submit target for security audit'},
]

ACTIONS = {
    'init': {
        'type': 'compute',
        'compute_unit': 'lvp:init',
        'output_map': {'run_id': 'run_id', 'output_dir': 'output_dir', 'phase': 'phase', 'lpp_root': 'lpp_root', 'api_key': 'api_key', 'api_base': 'api_base', 'model': 'model', 'auto_fix': 'auto_fix'},
    },
    'set_target': {
        'type': 'set',
        'target': 'target_path',
        'value_from': 'event.payload.target_path',
    },
    'set_target_name': {
        'type': 'compute',
        'compute_unit': 'lvp:set_target_name',
        'input_map': {'target_path': 'target_path'},
        'output_map': {'target_name': 'target_name'},
    },
    'extract_logic': {
        'type': 'compute',
        'compute_unit': 'lvp:extract_logic',
        'input_map': {'target_path': 'target_path', 'output_dir': 'output_dir', 'lpp_root': 'lpp_root'},
        'output_map': {'bone_json': 'bone_json', 'bone_path': 'bone_path', 'error': 'error'},
    },
    'set_phase_xray': {
        'type': 'set',
        'target': 'phase',
        'value': 'xray',
    },
    'define_invariants': {
        'type': 'compute',
        'compute_unit': 'lvp:define_invariants',
        'input_map': {'bone_json': 'bone_json', 'target_name': 'target_name', 'api_key': 'api_key', 'api_base': 'api_base', 'model': 'model', 'output_dir': 'output_dir'},
        'output_map': {'invariants': 'invariants', 'threat_model': 'threat_model', 'invariant_count': 'invariant_count', 'error': 'error'},
    },
    'set_phase_threat': {
        'type': 'set',
        'target': 'phase',
        'value': 'threat',
    },
    'generate_tla': {
        'type': 'compute',
        'compute_unit': 'lvp:generate_tla',
        'input_map': {'bone_json': 'bone_json', 'invariants': 'invariants', 'output_dir': 'output_dir', 'lpp_root': 'lpp_root'},
        'output_map': {'tla_spec': 'tla_spec', 'tla_path': 'tla_path', 'error': 'error'},
    },
    'run_tlc': {
        'type': 'compute',
        'compute_unit': 'lvp:run_tlc',
        'input_map': {'tla_path': 'tla_path', 'tla_spec': 'tla_spec', 'invariants': 'invariants', 'output_dir': 'output_dir', 'lpp_root': 'lpp_root'},
        'output_map': {'tlc_result': 'tlc_result', 'counter_examples': 'counter_examples', 'vulnerability_count': 'vulnerability_count', 'error': 'error'},
    },
    'set_phase_stress': {
        'type': 'set',
        'target': 'phase',
        'value': 'stress',
    },
    'analyze_traces': {
        'type': 'compute',
        'compute_unit': 'lvp:analyze_traces',
        'input_map': {'counter_examples': 'counter_examples', 'bone_json': 'bone_json', 'threat_model': 'threat_model', 'api_key': 'api_key', 'api_base': 'api_base', 'model': 'model'},
        'output_map': {'counter_examples': 'counter_examples', 'severity_score': 'severity_score', 'error': 'error'},
    },
    'generate_exploits': {
        'type': 'compute',
        'compute_unit': 'lvp:generate_exploits',
        'input_map': {'counter_examples': 'counter_examples', 'bone_json': 'bone_json', 'target_path': 'target_path', 'target_name': 'target_name', 'output_dir': 'output_dir', 'api_key': 'api_key', 'api_base': 'api_base', 'model': 'model'},
        'output_map': {'exploits': 'exploits', 'exploit_paths': 'exploit_paths', 'poc_generated': 'poc_generated', 'error': 'error'},
    },
    'set_phase_exploit': {
        'type': 'set',
        'target': 'phase',
        'value': 'exploit',
    },
    'generate_patches': {
        'type': 'compute',
        'compute_unit': 'lvp:generate_patches',
        'input_map': {'counter_examples': 'counter_examples', 'bone_json': 'bone_json', 'invariants': 'invariants', 'api_key': 'api_key', 'api_base': 'api_base', 'model': 'model', 'output_dir': 'output_dir'},
        'output_map': {'patches': 'patches', 'patched_json': 'patched_json', 'error': 'error'},
    },
    'set_phase_fix': {
        'type': 'set',
        'target': 'phase',
        'value': 'fix',
    },
    'verify_fix_tlaps': {
        'type': 'compute',
        'compute_unit': 'lvp:verify_fix_tlaps',
        'input_map': {'patched_json': 'patched_json', 'invariants': 'invariants', 'output_dir': 'output_dir', 'lpp_root': 'lpp_root'},
        'output_map': {'tlaps_proof': 'tlaps_proof', 'fix_verified': 'fix_verified', 'error': 'error'},
    },
    'generate_report': {
        'type': 'compute',
        'compute_unit': 'lvp:generate_report',
        'input_map': {'target_name': 'target_name', 'target_path': 'target_path', 'bone_json': 'bone_json', 'threat_model': 'threat_model', 'invariants': 'invariants', 'counter_examples': 'counter_examples', 'vulnerability_count': 'vulnerability_count', 'exploits': 'exploits', 'patches': 'patches', 'fix_verified': 'fix_verified', 'severity_score': 'severity_score', 'output_dir': 'output_dir', 'run_id': 'run_id'},
        'output_map': {'audit_report': 'audit_report', 'error': 'error'},
    },
    'generate_secure_report': {
        'type': 'compute',
        'compute_unit': 'lvp:generate_secure_report',
        'input_map': {'target_name': 'target_name', 'target_path': 'target_path', 'bone_json': 'bone_json', 'invariants': 'invariants', 'output_dir': 'output_dir', 'run_id': 'run_id'},
        'output_map': {'audit_report': 'audit_report'},
    },
    'capture_error': {
        'type': 'compute',
        'compute_unit': 'lvp:capture_error',
        'input_map': {'error': 'error', 'phase': 'phase', 'output_dir': 'output_dir'},
        'output_map': {'audit_report': 'audit_report'},
    },
    'clear_error': {
        'type': 'set',
        'target': 'error',
    },
}

TRANSITIONS = [
    {
        'id': 't_start',
        'from': 'idle',
        'to': 'idle',
        'on_event': 'START',
        'gates': [],
        'actions': ['init'],
    },
    {
        'id': 't_audit',
        'from': 'idle',
        'to': 'xray',
        'on_event': 'AUDIT',
        'gates': ['has_target'],
        'actions': ['set_target', 'set_target_name', 'set_phase_xray', 'extract_logic'],
    },
    {
        'id': 't_audit_no_target',
        'from': 'idle',
        'to': 'error',
        'on_event': 'AUDIT',
        'gates': ['no_target'],
        'actions': [],
    },
    {
        'id': 't_xray_done',
        'from': 'xray',
        'to': 'threat_modeling',
        'on_event': 'DONE',
        'gates': ['has_bone', 'no_error'],
        'actions': ['set_phase_threat', 'define_invariants'],
    },
    {
        'id': 't_xray_error',
        'from': 'xray',
        'to': 'error',
        'on_event': 'DONE',
        'gates': ['has_error'],
        'actions': ['capture_error'],
    },
    {
        'id': 't_threat_done',
        'from': 'threat_modeling',
        'to': 'stress_testing',
        'on_event': 'DONE',
        'gates': ['has_invariants', 'no_error'],
        'actions': ['set_phase_stress', 'generate_tla', 'run_tlc'],
    },
    {
        'id': 't_threat_error',
        'from': 'threat_modeling',
        'to': 'error',
        'on_event': 'DONE',
        'gates': ['has_error'],
        'actions': ['capture_error'],
    },
    {
        'id': 't_stress_vuln_found',
        'from': 'stress_testing',
        'to': 'analyzing_traces',
        'on_event': 'DONE',
        'gates': ['has_counter_examples', 'no_error'],
        'actions': ['analyze_traces'],
    },
    {
        'id': 't_stress_secure',
        'from': 'stress_testing',
        'to': 'secure',
        'on_event': 'DONE',
        'gates': ['no_counter_examples', 'no_error'],
        'actions': ['generate_secure_report'],
    },
    {
        'id': 't_stress_error',
        'from': 'stress_testing',
        'to': 'error',
        'on_event': 'DONE',
        'gates': ['has_error'],
        'actions': ['capture_error'],
    },
    {
        'id': 't_analyze_done',
        'from': 'analyzing_traces',
        'to': 'exploit_generation',
        'on_event': 'DONE',
        'gates': ['no_error'],
        'actions': ['set_phase_exploit', 'generate_exploits'],
    },
    {
        'id': 't_analyze_error',
        'from': 'analyzing_traces',
        'to': 'error',
        'on_event': 'DONE',
        'gates': ['has_error'],
        'actions': ['capture_error'],
    },
    {
        'id': 't_exploit_to_fix',
        'from': 'exploit_generation',
        'to': 'generating_fix',
        'on_event': 'DONE',
        'gates': ['has_exploits', 'auto_fix_enabled', 'no_error'],
        'actions': ['set_phase_fix', 'generate_patches'],
    },
    {
        'id': 't_exploit_to_report',
        'from': 'exploit_generation',
        'to': 'reporting',
        'on_event': 'DONE',
        'gates': ['has_exploits', 'auto_fix_disabled', 'no_error'],
        'actions': ['generate_report'],
    },
    {
        'id': 't_exploit_error',
        'from': 'exploit_generation',
        'to': 'error',
        'on_event': 'DONE',
        'gates': ['has_error'],
        'actions': ['capture_error'],
    },
    {
        'id': 't_fix_verify',
        'from': 'generating_fix',
        'to': 'verifying_fix',
        'on_event': 'DONE',
        'gates': ['has_patches', 'no_error'],
        'actions': ['verify_fix_tlaps'],
    },
    {
        'id': 't_fix_error',
        'from': 'generating_fix',
        'to': 'reporting',
        'on_event': 'DONE',
        'gates': ['has_error'],
        'actions': ['clear_error', 'generate_report'],
    },
    {
        'id': 't_verify_done',
        'from': 'verifying_fix',
        'to': 'reporting',
        'on_event': 'DONE',
        'gates': ['no_error'],
        'actions': ['generate_report'],
    },
    {
        'id': 't_verify_error',
        'from': 'verifying_fix',
        'to': 'reporting',
        'on_event': 'DONE',
        'gates': ['has_error'],
        'actions': ['clear_error', 'generate_report'],
    },
    {
        'id': 't_report_done',
        'from': 'reporting',
        'to': 'complete',
        'on_event': 'DONE',
        'gates': ['no_error'],
        'actions': [],
    },
    {
        'id': 't_report_error',
        'from': 'reporting',
        'to': 'error',
        'on_event': 'DONE',
        'gates': ['has_error'],
        'actions': ['capture_error'],
    },
    {
        'id': 't_reset',
        'from': '*',
        'to': 'idle',
        'on_event': 'RESET',
        'gates': [],
        'actions': [],
    },
    {
        'id': 't_error_retry',
        'from': 'error',
        'to': 'idle',
        'on_event': 'RETRY',
        'gates': [],
        'actions': ['clear_error'],
    },
]


# ======================================================================
# HELPER FUNCTIONS
# ======================================================================

def _resolve_path(path: str, data: dict):
    """Resolve a dotted path in a dictionary."""
    parts = path.split('.')
    obj = data
    for part in parts:
        if isinstance(obj, dict):
            obj = obj.get(part)
        else:
            return None
        if obj is None:
            return None
    return obj


# ======================================================================
# COMPILED OPERATOR
# ======================================================================

class Operator:
    """
    Compiled L++ Operator: Logic Vulnerability Pointer (LVP)
    """

    def __init__(self, compute_registry: dict = None):
        self.context = {'_state': ENTRY_STATE, 'target_path': None, 'target_name': None, 'output_dir': None, 'run_id': None, 'bone_json': None, 'bone_path': None, 'extraction_error': None, 'invariants': None, 'threat_model': None, 'invariant_count': None, 'tla_spec': None, 'tla_path': None, 'tlc_result': None, 'counter_examples': None, 'vulnerability_count': None, 'exploits': None, 'exploit_paths': None, 'poc_generated': None, 'patches': None, 'patched_json': None, 'tlaps_proof': None, 'fix_verified': None, 'audit_report': None, 'severity_score': None, 'phase': None, 'error': None, 'api_key': None, 'api_base': None, 'model': None, 'lpp_root': None, 'auto_fix': None}
        self.traces: list[TransitionTrace] = []
        self.compute_registry = compute_registry or {}

    @property
    def state(self) -> str:
        return self.context.get('_state', ENTRY_STATE)

    @property
    def is_terminal(self) -> bool:
        return self.state in TERMINAL_STATES

    def dispatch(self, event_name: str, payload: dict = None):
        """
        Dispatch an event to the operator.

        Args:
            event_name: Name of the event
            payload: Event payload data

        Returns:
            Tuple of (success, new_state, error)
        """
        payload = payload or {}
        current = self.state

        # Check terminal
        if self.is_terminal:
            return False, current, 'Already in terminal state'

        # Build evaluation scope
        scope = dict(self.context)
        scope['event'] = {'name': event_name, 'payload': payload}

        # Find matching transition (checks gates)
        trans = None
        for t in TRANSITIONS:
            if t['on_event'] != event_name:
                continue
            if t['from'] != '*' and t['from'] != current:
                continue
            # Check gates
            gates_pass = True
            for gate_id in t.get('gates', []):
                expr = GATES.get(gate_id, 'True')
                gate_result, _ = atom_EVALUATE(expr, scope)
                if not gate_result:
                    gates_pass = False
                    break
            if gates_pass:
                trans = t
                break

        if not trans:
            return False, current, f'No transition for {event_name}'

        # Execute actions
        for action_id in trans['actions']:
            action = ACTIONS.get(action_id)
            if not action:
                continue

            if action['type'] == 'set':
                # MUTATE
                target = action.get('target')
                if action.get('value') is not None:
                    value = action['value']
                elif action.get('value_from'):
                    value = _resolve_path(action['value_from'], scope)
                else:
                    value = None
                self.context, _ = atom_MUTATE(self.context, target, value)
                scope.update(self.context)  # Sync scope for chained actions

            elif action['type'] == 'compute':
                # DISPATCH
                unit = action.get('compute_unit', '')
                parts = unit.split(':')
                if len(parts) == 2:
                    sys_id, op_id = parts
                    inp = {
                        k: _resolve_path(v, scope)
                        for k, v in action.get('input_map', {}).items()
                    }
                    result, _ = atom_DISPATCH(
                        sys_id, op_id, inp, self.compute_registry
                    )
                    for ctx_path, res_key in action.get('output_map', {}).items():
                        if res_key in result:
                            self.context, _ = atom_MUTATE(
                                self.context, ctx_path, result[res_key]
                            )
                    scope.update(self.context)  # Sync scope for chained actions

        # TRANSITION
        (new_state, trace), _ = atom_TRANSITION(current, trans['to'])
        self.context, _ = atom_MUTATE(self.context, '_state', new_state)
        self.traces.append(trace)

        return True, new_state, None

    def get(self, path: str):
        """Get a value from context by path."""
        return _resolve_path(path, self.context)

    def set(self, path: str, value):
        """Set a value in context by path."""
        self.context, _ = atom_MUTATE(self.context, path, value)

    def display(self) -> str:
        """Evaluate display rules and return formatted string."""
        for rule in DISPLAY_RULES:
            gate = rule.get('gate')
            if gate:
                expr = GATES.get(gate, 'False')
                gate_result, _ = atom_EVALUATE(expr, self.context)
                if not gate_result:
                    continue
            # Gate passed or no gate, format template
            template = rule.get('template', '')
            try:
                return template.format(**self.context)
            except (KeyError, ValueError):
                return template
        return ''

    def reset(self):
        """Reset to initial state."""
        self.context = {'_state': ENTRY_STATE, 'target_path': None, 'target_name': None, 'output_dir': None, 'run_id': None, 'bone_json': None, 'bone_path': None, 'extraction_error': None, 'invariants': None, 'threat_model': None, 'invariant_count': None, 'tla_spec': None, 'tla_path': None, 'tlc_result': None, 'counter_examples': None, 'vulnerability_count': None, 'exploits': None, 'exploit_paths': None, 'poc_generated': None, 'patches': None, 'patched_json': None, 'tlaps_proof': None, 'fix_verified': None, 'audit_report': None, 'severity_score': None, 'phase': None, 'error': None, 'api_key': None, 'api_base': None, 'model': None, 'lpp_root': None, 'auto_fix': None}
        self.traces = []

    def save_state(self, path: str = None):
        """
        Save current state to JSON file.

        Args:
            path: File path (default: ./states/{id}.json)

        Returns:
            Path where state was saved
        """
        import json
        from pathlib import Path

        if not path:
            states_dir = Path('./states')
            states_dir.mkdir(exist_ok=True)
            path = states_dir / f'{BLUEPRINT_ID}.json'
        else:
            path = Path(path)
            path.parent.mkdir(parents=True, exist_ok=True)

        state_data = {
            'blueprint_id': BLUEPRINT_ID,
            'blueprint_version': BLUEPRINT_VERSION,
            'context': self.context,
            'traces': [
                {
                    'timestamp': t.timestamp.isoformat(),
                    'from_id': t.from_id,
                    'to_id': t.to_id,
                }
                for t in self.traces
            ]
        }

        with open(path, 'w') as f:
            json.dump(state_data, f, indent=2)

        return str(path)

    def load_state(self, path: str = None) -> bool:
        """
        Load state from JSON file.

        Args:
            path: File path (default: ./states/{id}.json)

        Returns:
            True if loaded successfully, False otherwise
        """
        import json
        from pathlib import Path
        from datetime import datetime, timezone

        if not path:
            path = Path('./states') / f'{BLUEPRINT_ID}.json'
        else:
            path = Path(path)

        if not path.exists():
            return False

        try:
            with open(path, 'r') as f:
                state_data = json.load(f)

            # Validate blueprint ID matches
            if state_data.get('blueprint_id') != BLUEPRINT_ID:
                print(f'[L++ WARNING] Blueprint ID mismatch: {state_data.get("blueprint_id")}')
                return False

            self.context = state_data.get('context', {})

            # Restore traces
            self.traces = []
            for t in state_data.get('traces', []):
                self.traces.append(TransitionTrace(
                    timestamp=datetime.fromisoformat(
                        t['timestamp']
                    ).replace(tzinfo=timezone.utc),
                    from_id=t['from_id'],
                    to_id=t['to_id'],
                ))

            return True
        except Exception as e:
            print(f'[L++ ERROR] Failed to load state: {e}')
            return False


def create_operator(compute_registry: dict = None) -> Operator:
    """Factory function to create a new Operator instance."""
    return Operator(compute_registry)


if __name__ == '__main__':
    print('L++ Compiled Operator: Logic Vulnerability Pointer (LVP)')
    print('States:', list(STATES.keys()))
    print('Entry:', ENTRY_STATE)
    print('Transitions:', len(TRANSITIONS))
