stateDiagram-v2
    %% L++ State Diagram: L++ Test Case Generator
    [*] --> idle
    idle --> loaded : LOAD [blueprint is None]
    loaded --> loaded : LOAD
    loaded --> analyzing : ANALYZE [blueprint is not None]
    analyzing --> generating : GENERATE [paths is not None and len(p...]
    loaded --> generating : GENERATE_ALL [blueprint is not None]
    analyzing --> loaded : BACK